# aoc

./: .envrc.local.example  .gitignore  2015.py  flake.nix  pyproject.toml  utils.py
.github/workflows/: ci.yml
src/aoc/: __init__.py
year/: 2015.py  2016.py  2017.py  2018.py  2019.py  2020.py  2021.py  2022.py  2023.py  2024.py
