[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aoc"
version = "0.1.0"
description = "My solutions to Advent of Code"
readme = "README.md"
authors = [{name = "multivac61", email = "olafur@genkiinstruments.com"}]
requires-python = ">=3.12"
dependencies = [
    "urllib3>=2.2.3",
]

[project.scripts]
aoc = "aoc:main"

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]
